--- a/CommonMark.xcodeproj/xcshareddata/xcschemes/CommonMark-Package.xcscheme
+++ b/CommonMark.xcodeproj/xcshareddata/xcschemes/CommonMark-Package.xcscheme
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "______Target_CommonMark"
+               BlueprintIdentifier = "CommonMark::CommonMark"
                BuildableName = "CommonMark.framework"
                BlueprintName = "CommonMark"
                ReferencedContainer = "container:CommonMark.xcodeproj">
@@ -26,6 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
@@ -36,6 +37,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -45,7 +47,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "______Target_CommonMark"
+            BlueprintIdentifier = "CommonMark::CommonMark"
             BuildableName = "CommonMark.framework"
             BlueprintName = "CommonMark"
             ReferencedContainer = "container:CommonMark.xcodeproj">
