--- a/CommonMark.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
+++ b/CommonMark.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
@@ -3,7 +3,7 @@
 <dict>
   <key>SchemeUserState</key>
   <dict>
-    <key>CommonMark.xcscheme</key>
+    <key>CommonMark-Package.xcscheme</key>
     <dict></dict>
   </dict>
   <key>SuppressBuildableAutocreation</key>
