Add some basic unit tests
Not exhaustive at all, but these at least check that the library gets built correctly.

--- a/CommonMark.xcodeproj/xcshareddata/xcschemes/CommonMark-Package.xcscheme
+++ b/CommonMark.xcodeproj/xcshareddata/xcschemes/CommonMark-Package.xcscheme
@@ -29,6 +29,16 @@
       language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CommonMark::CommonMarkTests"
+               BuildableName = "CommonMarkTests.xctest"
+               BlueprintName = "CommonMarkTests"
+               ReferencedContainer = "container:CommonMark.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
